[build-system]
requires = ["setuptools >= 40.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thsauto"
authors = [
    {name = "wukan", email = "wu-kan@163.com"},
]
description = "ths automation test"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ths", "automation"]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "pandas",
    "uiautomator2",
    "lxml",
    "loguru",
]
dynamic = ["version"]

[project.optional-dependencies]
cli = [
    "fastapi",
    "uvicorn[standard]",
    "fire",
]

[tool.setuptools]
packages = ["thsauto"]

[tool.setuptools.dynamic]
version = {attr = "thsauto._version.__version__"}

[project.scripts]
thsauto = "thsauto.cli:_main"
